tests/test164.rael.exp
Error [tests/test164.rael:2:12]: Block expected
|     with -2
|            ^
